# renamu-tracker

./: .gitignore  pyproject.toml  readme.md
output/llm_table_parser/json_parser/2004/: 2004_86_page_1.json  2004_86_page_2.json  2004_86_page_3.json  2004_86_page_4.json  2004_87_page_1.json  2004_87_page_10.json  2004_87_page_11.json  2004_87_page_12.json  2004_87_page_2.json  2004_87_page_3.json  2004_87_page_4.json  2004_87_page_5.json  2004_87_page_6.json  2004_87_page_7.json  2004_87_page_8.json  2004_87_page_9.json  2004_88_page_1.json  2004_88_page_2.json  2004_88_page_3.json
output/llm_table_parser/json_parser/2005/: 2005_86_page_1.json  2005_86_page_10.json  2005_86_page_11.json  2005_86_page_12.json  2005_86_page_13.json  2005_86_page_14.json  2005_86_page_15.json  2005_86_page_16.json  2005_86_page_2.json  2005_86_page_3.json  2005_86_page_4.json  2005_86_page_5.json  2005_86_page_6.json  2005_86_page_7.json  2005_86_page_8.json  2005_86_page_9.json  2005_87_page_1.json  2005_87_page_10.json  2005_87_page_11.json  2005_87_page_12.json  2005_87_page_13.json  2005_87_page_14.json  2005_87_page_15.json  2005_87_page_16.json  2005_87_page_17.json  2005_87_page_2.json  2005_87_page_3.json  2005_87_page_4.json  2005_87_page_5.json  2005_87_page_6.json  2005_87_page_7.json  2005_87_page_8.json  (+4 more)
src/: config.py  phase1_scan.py  phase2a_pdf_to_img.py  phase2b_img_to_llm.py  phase3_clean_info.r  phase3a_clean_infodb.py  phase3a_ref_classification.py  phase4a.py  utils.py
src/ai/: prompts.py  qwen_table_extractor.py  utils.py
src/archive/: test_torch.py
(+1133 files in other folders)
